--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
-
+===================================================================================
+Admin test account: Email: 'admin@lib.app', Password: 'foobar'
+===================================================================================
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
